# actix-web-jwt-couchdb

./: Cargo.toml  README.md
src/: main.rs
src/db/: couch.rs  mod.rs
src/logs_handlers/: mod.rs
