[package]
name = "web_api_mongo"
version = "0.1.0"
authors = ["Marcos Trajano <mtraja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
mongodb = "1.2.0"
bson = "1.2.0"
futures = "0.3.13"
chrono = "0.4.19"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
couchdb = "0.6"